[package]
name = "lightning-block-sync"
version = "0.0.1"
authors = ["Jeffrey Czyz", "Matt Corallo"]
license = "Apache-2.0"
edition = "2018"
description = """
Utilities to fetch the chain data from a block source and feed them into Rust Lightning.
"""

[features]
rest-client = [ "serde_json", "chunked_transfer" ]
rpc-client = [ "serde_json", "base64", "chunked_transfer" ]

[dependencies]
bitcoin = "0.24"
lightning = { version = "0.0.12", path = "../lightning" }
tokio = { version = "1.0", features = [ "io-util", "net" ], optional = true }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.9", optional = true }
chunked_transfer = { version = "1.3.0", optional = true }
futures = { version = "0.3.8" }

[dev-dependencies]
tokio = { version = "1.0", features = [ "macros", "rt" ] }
